# Facial-Tracking

./: .gitignore  CMakeLists.txt  README.md
data/: lm_vert_internal_73.txt
demo/: demo.cpp
example/: 3d_visual.cpp  easy3d_demo.cpp  main.cpp  pose_estimation.cpp
examples/: easy3d_learning.cpp  optimization.cpp
include/: fitting.h  identityOptimization.h  optimization.h  tensor.h  utility.h
project/: CMakeLists.txt
project/example/: main.cpp
project/src/: core_tensor.cpp  core_tensor.h  main.cpp
src/: fitting.cpp  identityOptimization.cpp  main.cpp  optimization.cpp  tensor.cpp  utility.cpp
